# nccl

./: .clang-format-ignore  CMakeLists.txt  CONTRIBUTING.md  Makefile
bindings/ir/: CMakeLists.txt  Makefile  nccl_device_wrapper.h  nccl_device_wrapper__impl.h
docs/contrib/: README.md
docs/examples/: Makefile  README.md
makefiles/: common.mk  version.mk
plugins/gin/: README.md
plugins/rma/: README.md
src/: CMakeLists.txt  Makefile  ce_coll.cc  collectives.cc  dev_runtime.cc  dev_runtime_internal.h  dev_runtime_segments.cc  diagnostics.cc  diagnostics.h  enqueue.cc  group.cc  init.cc  nccl.h.in  proxy.cc  sym_kernels.cc  transport.cc
src/config/: CMakeLists.txt  collconfig.cc
src/devcomm/: CMakeLists.txt  devcomm_v22902.cc  devcomm_v22907.cc  devcomm_v23000.cc  devcomm_v23100.cc
src/device/: Makefile  common_kernel.h  prims_simple.h
src/diagnostics/: CMakeLists.txt  p2p.cc  p2p.h
src/diagnostics/device/: CMakeLists.txt  Makefile  p2p.cu
src/gin/: CMakeLists.txt  gin_host.cc  gin_host_proxy.cc
src/graph/: search.cc  xml.cc  xml.h
src/include/: ce_coll.h  collectives.h  comm.h  cudawrap.h  dev_runtime.h  device.h  diagnostics_log.h  gdrwrap.h  info.h  nvmlwrap.h  nvtx.h  profiler.h  proxy.h  ras.h  strongstream.h  sym_kernels.h  transport.h  tuning.h
src/misc/: gdrwrap.cc  ibvwrap.cc  nvmlwrap.cc  strongstream.cc
src/os/: windows.cc  windows_stubs.cc
src/plugin/: gin.cc  profiler.cc  rma.cc
src/ras/: CMakeLists.txt  client.cc  client_support.cc  collectives.cc  diagnostics.cc  diagnostics.h  diagnostics_checks_passive.cc  peers.cc  ras.cc  (+4 more)
(+195 files in other folders)
